--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
-fastapi
-uvicorn
-sqlalchemy
-sentence-transformers
-pinecone>=3.0.0
-whisper
-openai
-python-dotenv
-pydantic
+fastapi>=0.68.0
+uvicorn>=0.15.0
+sqlalchemy>=1.4.0
+sentence-transformers>=2.2.0
+pinecone-client>=3.0.0
+openai-whisper>=20231117
+openai>=1.0.0
+python-dotenv>=0.19.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+python-multipart>=0.0.5
