--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,12 @@ yarn-error.log*
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+*.env
+!.env.example
+**/.env
+**/.*.env
 
 # Database
 *.db
