--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 fastapi>=0.68.0
 uvicorn>=0.15.0
+pinecone>=3.0.0
 sqlalchemy>=1.4.0
 sentence-transformers>=2.2.0
-pinecone-client>=3.0.0
 openai-whisper>=20231117
 openai>=1.0.0
 python-dotenv>=0.19.0
